# mat-rbf

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cc
include/: energy.h  io.h  material.h  mesh.h  solver.h  types.h
